apply plugin: 'com.android.library'
apply plugin: 'com.github.dcendents.android-maven'

project.group = GROUP
version = VERSION_NAME

dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.70"
    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4")
    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4")
    implementation 'com.squareup.retrofit2:retrofit:2.7.2'
    implementation 'com.squareup.okhttp3:okhttp:4.4.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
    implementation 'com.squareup.retrofit2:converter-jackson:2.7.2'
    implementation 'com.squareup.okio:okio:2.4.3'
    implementation 'com.google.guava:guava:24.1-jre'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.10.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.10.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.2'

    testImplementation("org.robolectric:robolectric:3.3.2") {
        exclude group: 'com.android.support', module: 'support-v4'
        exclude group: 'commons-logging', module: 'commons-logging'
        exclude group: 'org.apache.httpcomponents', module: 'httpclient'
    }
    testImplementation "junit:junit:4.12"
    testImplementation "org.easytesting:fest-assert-core:2.0M10"
    testImplementation "org.mockito:mockito-core:2.7.21"

    androidTestImplementation 'com.android.support.test:runner:0.5'
}

android {
    compileSdkVersion 29

    defaultConfig {
        minSdkVersion 15
        targetSdkVersion 29

        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        debug {
            testCoverageEnabled = true
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    packagingOptions {
        pickFirst 'META-INF/MANIFEST.MF'
        exclude 'LICENSE.txt'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/services/javax.annotation.processing.Processor'
    }
}



android.testOptions.unitTests.all {
    // Configure includes / excludes
    include '**/*Test.class'
    exclude '**/espresso/**/*.class'

    maxHeapSize = '2048m'
    jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
    maxParallelForks = 4
    forkEvery = 150

    afterTest { descriptor, result ->
        println "Executing test for ${descriptor.name} with result: ${result.resultType}"
    }
}


